x-pack/plugin/elastic-script/src/main/java/org/elasticsearch/xpack/escript/parser/ElasticScriptParser.java
/*
 * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
 * or more contributor license agreements. Licensed under the Elastic License
 * 2.0; you may not use this file except in compliance with the Elastic License
 * 2.0.
 */

package org.elasticsearch.xpack.escript.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ElasticScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, CREATE=6, DELETE=7, CALL=8, PROCEDURE=9,
		IN=10, OUT=11, INOUT=12, PRINT=13, DEBUG=14, INFO=15, WARN=16, ERROR=17,
		ELSEIF=18, ELSE=19, IF=20, THEN=21, END=22, BEGIN=23, EXECUTE=24, DECLARE=25,
		SET=26, FOR=27, NULL=28, WHILE=29, LOOP=30, ENDLOOP=31, TRY=32, CATCH=33,
		FINALLY=34, THROW=35, ENDTRY=36, FUNCTION=37, RETURN=38, BREAK=39, PERSIST=40,
		INTO=41, INT_TYPE=42, FLOAT_TYPE=43, STRING_TYPE=44, DATE_TYPE=45, NUMBER_TYPE=46,
		DOCUMENT_TYPE=47, ARRAY_TYPE=48, BOOLEAN_TYPE=49, PLUS=50, MINUS=51, MULTIPLY=52,
		DIVIDE=53, GREATER_THAN=54, LESS_THAN=55, NOT_EQUAL=56, GREATER_EQUAL=57,
		LESS_EQUAL=58, OR=59, AND=60, EQ=61, ASSIGN=62, DOT_DOT=63, PIPE=64, DOT=65,
		LPAREN=66, RPAREN=67, COMMA=68, COLON=69, SEMICOLON=70, BOOLEAN=71, FLOAT=72,
		INT=73, STRING=74, ID=75, COMMENT=76, WS=77, LENGTH=78, SUBSTR=79, UPPER=80,
		LOWER=81, TRIM=82, LTRIM=83, RTRIM=84, REPLACE=85, INSTR=86, LPAD=87,
		RPAD=88, SPLIT=89, CONCAT=90, REGEXP_REPLACE=91, REGEXP_SUBSTR=92, REVERSE=93,
		INITCAP=94, LIKE=95, ABS=96, CEIL=97, FLOOR=98, ROUND=99, POWER=100, SQRT=101,
		LOG=102, EXP=103, MOD=104, SIGN=105, TRUNC=106, CURRENT_DATE=107, CURRENT_TIMESTAMP=108,
		DATE_ADD=109, DATE_SUB=110, EXTRACT_YEAR=111, EXTRACT_MONTH=112, EXTRACT_DAY=113,
		DATEDIFF=114, ARRAY_LENGTH=115, ARRAY_APPEND=116, ARRAY_PREPEND=117, ARRAY_REMOVE=118,
		ARRAY_CONTAINS=119, ARRAY_DISTINCT=120, DOCUMENT_KEYS=121, DOCUMENT_VALUES=122,
		DOCUMENT_GET=123, DOCUMENT_MERGE=124, DOCUMENT_REMOVE=125, DOCUMENT_CONTAINS=126,
		ESQL_QUERY=127, INDEX_DOCUMENT=128;
	public static final int
		RULE_program = 0, RULE_procedure = 1, RULE_create_procedure_statement = 2,
		RULE_delete_procedure_statement = 3, RULE_statement = 4, RULE_call_procedure_statement = 5,
		RULE_print_statement = 6, RULE_break_statement = 7, RULE_return_statement = 8,
		RULE_expression_statement = 9, RULE_execute_statement = 10, RULE_variable_assignment = 11,
		RULE_esql_query_content = 12, RULE_declare_statement = 13, RULE_variable_declaration_list = 14,
		RULE_variable_declaration = 15, RULE_assignment_statement = 16, RULE_if_statement = 17,
		RULE_elseif_block = 18, RULE_condition = 19, RULE_loop_statement = 20,
		RULE_for_range_loop = 21, RULE_for_array_loop = 22, RULE_while_loop = 23,
		RULE_range_loop_expression = 24, RULE_array_loop_expression = 25, RULE_try_catch_statement = 26,
		RULE_throw_statement = 27, RULE_function_definition = 28, RULE_function_call_statement = 29,
		RULE_function_call = 30, RULE_parameter_list = 31, RULE_parameter = 32,
		RULE_argument_list = 33, RULE_expression = 34, RULE_logicalOrExpression = 35,
		RULE_logicalAndExpression = 36, RULE_equalityExpression = 37, RULE_relationalExpression = 38,
		RULE_additiveExpression = 39, RULE_multiplicativeExpression = 40, RULE_unaryExpr = 41,
		RULE_arrayLiteral = 42, RULE_expressionList = 43, RULE_documentLiteral = 44,
		RULE_documentField = 45, RULE_pairList = 46, RULE_pair = 47, RULE_primaryExpression = 48,
		RULE_bracketExpression = 49, RULE_simplePrimaryExpression = 50, RULE_varRef = 51,
		RULE_datatype = 52, RULE_array_datatype = 53, RULE_persist_clause = 54,
		RULE_severity = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "procedure", "create_procedure_statement", "delete_procedure_statement",
			"statement", "call_procedure_statement", "print_statement", "break_statement",
			"return_statement", "expression_statement", "execute_statement", "variable_assignment",
			"esql_query_content", "declare_statement", "variable_declaration_list",
			"variable_declaration", "assignment_statement", "if_statement", "elseif_block",
			"condition", "loop_statement", "for_range_loop", "for_array_loop", "while_loop",
			"range_loop_expression", "array_loop_expression", "try_catch_statement",
			"throw_statement", "function_definition", "function_call_statement",
			"function_call", "parameter_list", "parameter", "argument_list", "expression",
			"logicalOrExpression", "logicalAndExpression", "equalityExpression",
			"relationalExpression", "additiveExpression", "multiplicativeExpression",
			"unaryExpr", "arrayLiteral", "expressionList", "documentLiteral", "documentField",
			"pairList", "pair", "primaryExpression", "bracketExpression", "simplePrimaryExpression",
			"varRef", "datatype", "array_datatype", "persist_clause", "severity"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'{'", "'}'", "'OF'", "'CREATE'", "'DELETE'", "'CALL'",
			"'PROCEDURE'", "'IN'", "'OUT'", "'INOUT'", "'PRINT'", "'DEBUG'", "'INFO'",
			"'WARN'", "'ERROR'", "'ELSEIF'", "'ELSE'", "'IF'", "'THEN'", "'END'",
			"'BEGIN'", "'EXECUTE'", "'DECLARE'", "'SET'", "'FOR'", null, "'WHILE'",
			"'LOOP'", "'END LOOP'", "'TRY'", "'CATCH'", "'FINALLY'", "'THROW'", "'END TRY'",
			"'FUNCTION'", "'RETURN'", "'BREAK'", "'PERSIST'", "'INTO'", "'INT'",
			"'FLOAT'", "'STRING'", "'DATE'", "'NUMBER'", "'DOCUMENT'", "'ARRAY'",
			"'BOOLEAN'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'!='", "'>='",
			"'<='", "'OR'", "'AND'", "'=='", "'='", "'..'", "'|'", "'.'", "'('",
			"')'", "','", "':'", "';'", null, null, null, null, null, null, null,
			"'LENGTH'", "'SUBSTR'", "'UPPER'", "'LOWER'", "'TRIM'", "'LTRIM'", "'RTRIM'",
			"'REPLACE'", "'INSTR'", "'LPAD'", "'RPAD'", "'SPLIT'", "'||'", "'REGEXP_REPLACE'",
			"'REGEXP_SUBSTR'", "'REVERSE'", "'INITCAP'", "'LIKE'", "'ABS'", "'CEIL'",
			"'FLOOR'", "'ROUND'", "'POWER'", "'SQRT'", "'LOG'", "'EXP'", "'MOD'",
			"'SIGN'", "'TRUNC'", "'CURRENT_DATE'", "'CURRENT_TIMESTAMP'", "'DATE_ADD'",
			"'DATE_SUB'", "'EXTRACT_YEAR'", "'EXTRACT_MONTH'", "'EXTRACT_DAY'", "'DATEDIFF'",
			"'ARRAY_LENGTH'", "'ARRAY_APPEND'", "'ARRAY_PREPEND'", "'ARRAY_REMOVE'",
			"'ARRAY_CONTAINS'", "'ARRAY_DISTINCT'", "'DOCUMENT_KEYS'", "'DOCUMENT_VALUES'",
			"'DOCUMENT_GET'", "'DOCUMENT_MERGE'", "'DOCUMENT_REMOVE'", "'DOCUMENT_CONTAINS'",
			"'ESQL_QUERY'", "'INDEX_DOCUMENT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "CREATE", "DELETE", "CALL", "PROCEDURE",
			"IN", "OUT", "INOUT", "PRINT", "DEBUG", "INFO", "WARN", "ERROR", "ELSEIF",
			"ELSE", "IF", "THEN", "END", "BEGIN", "EXECUTE", "DECLARE", "SET", "FOR",
			"NULL", "WHILE", "LOOP", "ENDLOOP", "TRY", "CATCH", "FINALLY", "THROW",
			"ENDTRY", "FUNCTION", "RETURN", "BREAK", "PERSIST", "INTO", "INT_TYPE",
			"FLOAT_TYPE", "STRING_TYPE", "DATE_TYPE", "NUMBER_TYPE", "DOCUMENT_TYPE",
			"ARRAY_TYPE", "BOOLEAN_TYPE", "PLUS", "MINUS", "MULTIPLY", "DIVIDE",
			"GREATER_THAN", "LESS_THAN", "NOT_EQUAL", "GREATER_EQUAL", "LESS_EQUAL",
			"OR", "AND", "EQ", "ASSIGN", "DOT_DOT", "PIPE", "DOT", "LPAREN", "RPAREN",
			"COMMA", "COLON", "SEMICOLON", "BOOLEAN", "FLOAT", "INT", "STRING", "ID",
			"COMMENT", "WS", "LENGTH", "SUBSTR", "UPPER", "LOWER", "TRIM", "LTRIM",
			"RTRIM", "REPLACE", "INSTR", "LPAD", "RPAD", "SPLIT", "CONCAT", "REGEXP_REPLACE",
			"REGEXP_SUBSTR", "REVERSE", "INITCAP", "LIKE", "ABS", "CEIL", "FLOOR",
			"ROUND", "POWER", "SQRT", "LOG", "EXP", "MOD", "SIGN", "TRUNC", "CURRENT_DATE",
			"CURRENT_TIMESTAMP", "DATE_ADD", "DATE_SUB", "EXTRACT_YEAR", "EXTRACT_MONTH",
			"EXTRACT_DAY", "DATEDIFF", "ARRAY_LENGTH", "ARRAY_APPEND", "ARRAY_PREPEND",
			"ARRAY_REMOVE", "ARRAY_CONTAINS", "ARRAY_DISTINCT", "DOCUMENT_KEYS",
			"DOCUMENT_VALUES", "DOCUMENT_GET", "DOCUMENT_MERGE", "DOCUMENT_REMOVE",
			"DOCUMENT_CONTAINS", "ESQL_QUERY", "INDEX_DOCUMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ElasticScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

    @SuppressWarnings("this-escape")
	public ElasticScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Create_procedure_statementContext create_procedure_statement() {
			return getRuleContext(Create_procedure_statementContext.class,0);
		}
		public Delete_procedure_statementContext delete_procedure_statement() {
			return getRuleContext(Delete_procedure_statementContext.class,0);
		}
		public Call_procedure_statementContext call_procedure_statement() {
			return getRuleContext(Call_procedure_statementContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElasticScriptListener ) ((ElasticScriptListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElasticScriptListener ) ((ElasticScriptListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElasticScriptVisitor ) return ((ElasticScriptVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				create_procedure_statement();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				delete_procedure_statement();
				}
				break;
			case CALL:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				call_procedure_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureContext extends ParserRuleContext {
		public List<TerminalNode> PROCEDURE() { return getTokens(ElasticScriptParser.PROCEDURE); }
		public TerminalNode PROCEDURE(int i) {
			return getToken(ElasticScriptParser.PROCEDURE, i);
		}
		public TerminalNode ID() { return getToken(ElasticScriptParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(ElasticScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ElasticScriptParser.RPAREN, 0); }
		public TerminalNode BEGIN() { return getToken(ElasticScriptParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(ElasticScriptParser.END, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElasticScriptListener ) ((ElasticScriptListener)listener).enterProcedure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElasticScriptListener ) ((ElasticScriptListener)listener).exitProcedure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElasticScriptVisitor ) return ((ElasticScriptVisitor<? extends T>)visitor).visitProcedure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_procedure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(PROCEDURE);
			setState(118);
			match(ID);
			setState(119);
			match(LPAREN);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7168L) != 0) || _la==ID) {
				{
				setState(120);
				parameter_list();
				}
			}

			setState(123);
			match(RPAREN);
			setState(124);
			match(BEGIN);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				statement();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2252801599086858L) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & 1009L) != 0) );
			setState(130);
			match(END);
			setState(131);
			match(PROCEDURE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Create_procedure_statementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(ElasticScriptParser.CREATE, 0); }
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public Create_procedure_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_procedure_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElasticScriptListener ) ((ElasticScriptListener)listener).enterCreate_procedure_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElasticScriptListener ) ((ElasticScriptListener)listener).exitCreate_procedure_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElasticScriptVisitor ) return ((ElasticScriptVisitor<? extends T>)visitor).visitCreate_procedure_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_procedure_statementContext create_procedure_statement() throws RecognitionException {
		Create_procedure_statementContext _localctx = new Create_procedure_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_create_procedure_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(CREATE);
			setState(134);
			procedure();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Delete_procedure_statementContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(ElasticScriptParser.DELETE, 0); }
		public TerminalNode PROCEDURE() { return getToken(ElasticScriptParser.PROCEDURE, 0); }
		public TerminalNode ID() { return getToken(ElasticScriptParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(ElasticScriptParser.SEMICOLON, 0); }
		public Delete_procedure_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delete_procedure_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElasticScriptListener ) ((ElasticScriptListener)listener).enterDelete_procedure_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElasticScriptListener ) ((ElasticScriptListener)listener).exitDelete_procedure_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElasticScriptVisitor ) return ((ElasticScriptVisitor<? extends T>)visitor).visitDelete_procedure_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Delete_procedure_statementContext delete_procedure_statement() throws RecognitionException {
		Delete_procedure_statementContext _localctx = new Delete_procedure_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_delete_procedure_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(DELETE);
			setState(137);
			match(PROCEDURE);
			setState(138);
			match(ID);
			setState(139);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
